--- a/myproject/requirements.txt
+++ b/myproject/requirements.txt
@@ -1,4 +1,23 @@
 asgiref==3.6.0
-Django==4.2
+channels==4.0.0
+click==8.1.3
+colorama==0.4.6
+dash==2.9.3
+dash-bootstrap-components==1.4.1
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+Django==3.2.18
+django-plotly-dash==2.1.4
+dpd-components==0.1.0
+Flask==2.2.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+packaging==23.1
+plotly==5.14.1
+pytz==2023.3
 sqlparse==0.4.3
+tenacity==8.2.2
 tzdata==2023.3
+Werkzeug==2.2.3
