--- a/myproject/requirements.txt
+++ b/myproject/requirements.txt
@@ -1,7 +1,13 @@
+appdirs==1.4.4
 asgiref==3.6.0
+beautifulsoup4==4.12.2
+certifi==2022.12.7
+cffi==1.15.1
 channels==4.0.0
+charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
+cryptography==40.0.2
 dash==2.9.3
 dash-bootstrap-components==1.4.1
 dash-core-components==2.0.0
@@ -11,13 +17,28 @@ Django==3.2.18
 django-plotly-dash==2.1.4
 dpd-components==0.1.0
 Flask==2.2.3
+frozendict==2.3.7
+html5lib==1.1
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+lxml==4.9.2
 MarkupSafe==2.1.2
+multitasking==0.0.11
+numpy==1.24.2
 packaging==23.1
+pandas==2.0.0
 plotly==5.14.1
+pycparser==2.21
+python-dateutil==2.8.2
 pytz==2023.3
+requests==2.28.2
+six==1.16.0
+soupsieve==2.4.1
 sqlparse==0.4.3
 tenacity==8.2.2
 tzdata==2023.3
+urllib3==1.26.15
+webencodings==0.5.1
 Werkzeug==2.2.3
+yfinance==0.2.18
