--- a/myproject/requirements.txt
+++ b/myproject/requirements.txt
@@ -1,18 +1,43 @@
 appdirs==1.4.4
-asgiref==3.6.0
-dash==2.9.3
-dash-bootstrap-components==1.4.1
-dash-core-components==2.0.0
-dash-html-components==2.0.0
+asgiref==3.5.0
+beautifulsoup4==4.10.0
+certifi==2022.10.8
+cffi==1.15.6
+channels==3.0.4
+charset-normalizer==2.0.7
+click==8.1.2
+colorama==0.4.4
+cryptography==36.0.1
+dash==2.1.0
+dash-bootstrap-components==1.0.1
+dash-core-components==2.15.0
+dash-html-components==2.8.0
 dash-table==5.0.0
-Django==3.2.18
-django-plotly-dash==2.1.4
+Django==3.2.9
+django-plotly-dash==1.5.2
 dpd-components==0.1.0
-Flask==2.2.3
-
-plotly==5.14.1
+Flask==2.1.1
+frozendict==2.1.0
+html5lib==1.1
+idna==3.3
+itsdangerous==2.1.0
+Jinja2==3.0.2
+lxml==4.6.3
+MarkupSafe==2.1.0
+multitasking==0.0.10
+numpy==1.21.4
+packaging==21.3
+pandas==1.4.1
+plotly==5.15.0
 pycparser==2.21
 python-dateutil==2.8.2
-pytz==2023.3
-requests==2.28.2
-yfinance==0.2.18
+pytz==2021.3
+requests==2.26.0
+six==1.16.0
+soupsieve==2.3.1
+sqlparse==0.4.2
+tenacity==8.0.1
+urllib3==1.26.7
+webencodings==0.5.1
+Werkzeug==2.0.2
+yfinance==0.1.63
