--- a/myproject/docker-compose.yml
+++ b/myproject/docker-compose.yml
@@ -1,11 +1,8 @@
-version: '3'
+version: '3.9'
 
 services:
-  web:
-    build:
-      context: .
-      dockerfile: Dockerfile
+  django:
+    image: django-docker:0.0.1
+    build: .
     ports:
-      - "6969:6969"
-    volumes:
-      - .:/app
+     - "6969:6969"
